# Diagnosis-plant-model

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  pyproject.toml  requirements.txt  test.py  train.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
archive/: model_v1.py
checkpoints/: README.md
configs/: default.json
data/: README.md
notebooks/: demo.ipynb
scripts/: evaluate.py  gradcam.py  predict.py  train.py
src/plantdx/: __init__.py  dataset.py  model.py  trainer.py
tests/: test_model.py
